# hnc

./: CMakeLists.txt  Makefile  README.txt  hnc-config.cmake
cmake/: hnc-config.cmake  hnc_boost_asio-config.cmake  hnc_boost_mpi-config.cmake  hnc_boost_serialization-config.cmake  hnc_boost_system-config.cmake  hnc_compiler_mpi_cpp-config.cmake  hnc_gnuplot_exe-config.cmake  hnc_linux-config.cmake  hnc_openssl-config.cmake  hnc_os_x-config.cmake  hnc_pdflatex_exe-config.cmake  hnc_unix-config.cmake  hnc_windows-config.cmake
doc/img/: hnc_benchmark_functions_gnuplot.eps  hnc_filesystem.eps  hnc_gnuplot_gnuplot_boxes.eps  hnc_gnuplot_gnuplot_lines.eps  hnc_gnuplot_gnuplot_lines_with_multilines.eps  hnc_gnuplot_plot_boxes_fill_pattern.data  hnc_gnuplot_plot_boxes_fill_pattern.eps  hnc_gnuplot_plot_boxes_fill_pattern.gnuplot
include/: Doxyfile
include/hnc/: Doxyfile  algo.hpp  any.hpp  args.hpp  assert.hpp  benchmark.hpp  benchmark_functions.hpp  boost_serialization_std.hpp  character_encoding.hpp  clone.hpp  color.hpp  computer.hpp  container.hpp  copy_and_swap.hpp  copy_ptr.hpp  except.hpp  filesystem.hpp  genetic_algo.hpp  geometry.hpp  gnuplot.hpp  hnc.hpp  html.hpp  http.hpp  index2D.hpp  int.hpp  iterator.hpp  lang.hpp  latex.hpp  log_level.hpp  math.hpp  mpi.hpp  openmp.hpp  optional.hpp  optional_ptr.hpp  ostream_std.hpp  ostreamable.hpp  print.hpp  random.hpp  raw_data.hpp  rectangle.hpp  (+28 more)
include/hnc/algo/: compare_range.hpp  find_range.hpp  genetic_algo.hpp  random_element.hpp  replace.hpp  replace_all.hpp  replace_range.hpp  split.hpp  sum.hpp  to_upper.hpp
include/hnc/color/: latex.hpp
include/hnc/geometry/: is_in_rectangle.hpp  rectangle.hpp
include/hnc/gnuplot/: gnuplot.hpp  gnuplot_boxes.hpp  gnuplot_lines.hpp  output_terminal.hpp  plot.hpp  plot_boxes.hpp  plot_lines.hpp  style.hpp  x_range.hpp  x_tics.hpp
include/hnc/html/: doctype.hpp  head.hpp  webpage.hpp
include/hnc/http/: get.hpp  url_encode.hpp  w3c_validator.hpp
include/hnc/int/: int8.hpp  rational.hpp  uint8.hpp
include/hnc/iterator/: const_iterator.hpp  const_reverse_iterator.hpp  iterator.hpp  reverse_iterator.hpp
include/hnc/latex/: article.hpp
include/hnc/math/: abs.hpp  cartesian_product.hpp  combination.hpp  gcd.hpp  geometric_mean.hpp  linear_equation.hpp  linear_equation_named.hpp  mean.hpp  median.hpp  nth_root.hpp  permutation.hpp  pi.hpp  relational_operator.hpp  standard_deviation.hpp  variance.hpp
include/hnc/mpi/: future.hpp
include/hnc/omp/: run_at_same_time.hpp  run_parallel.hpp
include/hnc/openmp/: run_at_same_time.hpp  run_parallel.hpp
include/hnc/scheduler/: iteration.hpp
include/hnc/ssl/hash/: md2.hpp  md4.hpp  md5.hpp  mdc2.hpp  rmd160.hpp  sha.hpp
include/hnc/system_of_measurement/: degree.hpp  radian.hpp
tests/: algo.cpp  algo_find_range.cpp  algo_genetic_algo_find_a_word.cpp  algo_random_element.cpp  algo_replace.cpp  algo_replace_all.cpp  algo_replace_range.cpp  algo_sum.cpp  algo_to_upper.cpp  any.cpp  args_dev.cpp  args_with_one_argument.cpp  args_without_argument.cpp  boost_serialization_std.cpp  character_encoding.cpp  clone.cpp  color.cpp  computer.cpp  container.cpp  copy_and_swap.cpp  copy_ptr.cpp  copy_this_file_to_create_a_new_test.cpp  except.cpp  filesystem.cpp  geometry.cpp  geometry_is_in_rectangle.cpp  geometry_rectangle.cpp  gnuplot.cpp  gnuplot_gnuplot.cpp  gnuplot_gnuplot_lines.cpp  gnuplot_gnuplot_lines_with_multilines.cpp  gnuplot_output_terminal.cpp  gnuplot_plot.cpp  gnuplot_plot_boxes.cpp  gnuplot_plot_lines.cpp  gnuplot_x_range.cpp  hnc.cpp  html.cpp  html_doctype.cpp  html_webpage.cpp  (+133 more)
tests_human/: human_test__sleep.cpp
tests_visual/: visual_test__benchmark.cpp  visual_test__benchmark_functions.cpp  visual_test__benchmark_name_opt.cpp  visual_test__gnuplot_style.cpp  visual_test__gnuplot_x_tics.cpp  visual_test__html_doctype.cpp  visual_test__lang.cpp  visual_test__omp_run_at_same_time.cpp  visual_test__openmp_run_parallel.cpp  visual_test__ostream_std.cpp  visual_test__ostream_std_no_data.cpp  visual_test__ostream_std_size.cpp  visual_test__sleep.cpp  visual_test__terminal.cpp  visual_test__vector2D.cpp  visual_test__vector2D_C_style_minimal.cpp  visual_test__vector2D_C_style_minimal_no_data.cpp  visual_test__vector2D_C_style_minimal_size.cpp  visual_test__vector2D_minimal.cpp  visual_test__vector2D_minimal_no_data.cpp  visual_test__vector2D_no_data.cpp  visual_test__vector2D_size.cpp
